# empirical-lang

./: .cirrus.yml  .travis.yml  CMakeLists.txt  CONDUCT  CONTRIBUTING.md  LICENSE  MAINTAINING.md  Makefile  README.md  appveyor.yml  make.bat  sysconfig.hpp.in
.github/workflows/: empirical.yml
cmake/: FindASDL.cmake  FindGenVVM.cmake
doc/: CMakeLists.txt  events.csv  prices.csv  quotes.csv  trades.csv  tutorial.md  tutorial_core.md  tutorial_running.md
scripts/: build.bat  build.sh  deploy.bat  deploy.sh  gh_update.sh  prep_ubuntu.sh  test.bat  test.sh  website.sh
src/: AST.asdl  Empirical.g4  HIR.asdl  README.md  codegen.cpp  empirical.hpp  linenoise.hpp  main.cpp  parse.cpp  sema.cpp  string_helpers.hpp  traits.hpp
src/VVM/: README.md  VVMAsm.g4  assemble.cpp  bytecode.cpp  gen_vvm.py  interpret.cpp  vvm.hpp
src/VVM/utils/: README.md  conversion.hpp  csv_infer.cpp  csv_infer.hpp  nil.hpp  terminal.hpp  timer.hpp  timestamp.cpp  timestamp.hpp
tests/: CMakeLists.txt  README.md  arithmetic.emp  assign.md  comptime.md  ctfe.emp  data.emp  dataframe.md  err.md  err_global.md  function.emp  generic.emp  globals.emp  if.emp  inline.emp  inline.md  joins.md  len.md  load.emp  macro.emp  math.md  ops.md  placeholders.emp  print.emp  print2.emp  query.emp  repr.md  reverse.md  sort.md  store.emp  templates.emp  test_emp.sh  time.md  traits.md  while.emp
tests/VVM/: CMakeLists.txt  README.md  add.vvm  arithmetic.vvm  br.vvm  concat.vvm  data.vvm  dataframe.vvm  eqmatch.vvm  floats.vvm  func.vvm  group.vvm  lists.vvm  load.vvm  repr.vvm  sort.vvm  stream.vvm  strings.vvm  take.vvm  test_vvm.sh  where.vvm
tests/VVM/utils/: CMakeLists.txt  README.md  conversion.cpp  csv_infer.cpp  test.hpp  timestamp.cpp
tests/sample_csv/: listings.csv  malformed.csv  prices.csv  store_check1.csv  store_check2.csv
